# CMakeList.txt : CMake project for mySandbox5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("mySandbox6")

# Add source to this project's executable.
add_executable (mySandbox6 "mySandbox6.cpp" "mySandbox6.h")

# TODO: Add tests and install targets if needed.
